Update for BS4 : col-xs- -> col-

--- a/templates/association/delete.html
+++ b/templates/association/delete.html
@@ -14,7 +14,7 @@
 
 {% block content %}
   <div class="row">
-    <div class="col-xs-12">
+    <div class="col-12">
       <div class="alert alert-danger" role="alert">
         <b>Attention !</b> La suppression de l'association <i>{{ association.name }}</i> entraînera la <u>perte irréversible</u> des données y étant associées.<br>
         Voulez-vous <u>vraiment</u> poursuivre ?
