--- a/templates/association/mandate/people_delete.html
+++ b/templates/association/mandate/people_delete.html
@@ -10,7 +10,7 @@
 
 {% block content_association %}
   <div class="row">
-    <div class="col-xs-12">
+    <div class="col-12">
       <div class="alert alert-danger" role="alert">
         <b>Attention !</b> Vous vous apprêtez à supprimer <i>{{ object.first_name }} {{ object.last_name|upper }}</i> de la liste des membres du bureau.<br>
         Voulez-vous <u>vraiment</u> poursuivre ?
