--- a/templates/file/resources/folders/delete.html
+++ b/templates/file/resources/folders/delete.html
@@ -10,7 +10,7 @@
 
 {% block content %}
   <div class="row">
-    <div class="col-xs-12">
+    <div class="col-12">
       <div class="alert alert-danger" role="alert">
         <b>Attention !</b> La suppression du dossier <i>{{ object.path }}</i> entraînera sa <u>perte irréversible</u>,
           les fichiers qui y sont stockés seront supprimés.<br>
