--- a/templates/newsletter/article/delete.html
+++ b/templates/newsletter/article/delete.html
@@ -10,7 +10,7 @@
 
 {% block content %}
   <div class="row">
-    <div class="col-xs-12">
+    <div class="col-12">
       <div class="alert alert-danger" role="alert">
         <b>Attention !</b> La suppression de l'article <i>{{ object.title }}</i> entraînera sa <u>perte irréversible</u>.<br>
         Voulez-vous <u>vraiment</u> poursuivre ?
