--- a/templates/file/resources/files/delete.html
+++ b/templates/file/resources/files/delete.html
@@ -10,7 +10,7 @@
 
 {% block content %}
   <div class="row">
-    <div class="col-xs-12">
+    <div class="col-12">
       <div class="alert alert-danger" role="alert">
         <b>Attention !</b> La suppression du fichier <i>{{ object }}</i> entraînera sa <u>perte irréversible</u>,<br>
         Voulez-vous <u>vraiment</u> poursuivre ?
