--- a/templates/member/password_reset.html
+++ b/templates/member/password_reset.html
@@ -10,7 +10,7 @@
   <div class="row">
     <div class="col-md-3"></div>
 
-    <div class="col-md-6 col-xs-12">
+    <div class="col-md-6 col-12">
       {% crispy form %}
     </div>
 
