--- a/templates/utils/place/delete.html
+++ b/templates/utils/place/delete.html
@@ -14,7 +14,7 @@
 
 {% block content %}
   <div class="row">
-    <div class="col-xs-12">
+    <div class="col-12">
       <div class="alert alert-danger" role="alert">
         <b>Attention !</b> La suppression du lieu <i>{{ object.name }}</i> est irréversible.<br>
         Voulez-vous <u>vraiment</u> poursuivre ?
