Export IBAN and BIC. Close #60

--- a/templates/export/export.html
+++ b/templates/export/export.html
@@ -26,13 +26,16 @@
             <h4 class="mt-2">Données à exporter :</h4>
             <div class="btn-group" data-toggle="buttons">
                 <label class="btn btn-primary active">
-                    <input type="checkbox" name="data" value="BASIC" autocomplete="off" checked> Informations Basiques
+                    <input type="checkbox" name="data" value="BASIC" autocomplete="off" checked> Informations basiques
                 </label>
                 <label class="btn btn-primary">
                     <input type="checkbox" name="data" value="VALIDATIONS" autocomplete="off"> Validations
                 </label>
                 <label class="btn btn-primary">
                     <input type="checkbox" name="data" value="PRESIDENT" autocomplete="off"> Contact président
+                </label>
+                <label class="btn btn-primary">
+                    <input type="checkbox" name="data" value="BANK" autocomplete="off"> Coordonnées bancaires
                 </label>
             </div>
                 <button type="submit" class="btn btn-success btn-block btn-lg col-md-4 mt-4 ml-auto mr-auto">Télécharger</button>
