--- a/templates/base.html
+++ b/templates/base.html
@@ -138,11 +138,14 @@
             </ul>
             <ul class="navbar-nav">
                 {% if user.is_authenticated %}
-
                     <li class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                            aria-expanded="false">{{ user.email }} <span class="caret"></span></a>
                         <div class="dropdown-menu">
+                            {% if user.is_staff %}
+                                <a class="dropdown-item" href="{% url 'admin:index' %}">Admin</a>
+                                <div class="dropdown-divider"></div>
+                            {% endif %}
                             <a class="dropdown-item"
                                    href="{% url 'member-change-password' %}">Changer le mot de passe</a>
                             <a class="dropdown-item"
