--- a/templates/base.html
+++ b/templates/base.html
@@ -179,7 +179,7 @@
         <div class="col-12">
             <h1>
                 {% block page_title %}{% endblock %}
-                <small>{% block page_sub_title %}{% endblock %}</small>
+                <small class="text-muted">{% block page_sub_title %}{% endblock %}</small>
 
                 <div class="btn-group float-right" role="group" aria-label="...">
                     <div class="btn-group" role="group">
