Add tabs to asso modal

--- a/templates/directory/public.html
+++ b/templates/directory/public.html
@@ -55,106 +55,135 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <div class="row">
-                            <div class="col-12">
-                                <h5>Description</h5>
 
-                                {% if asso.logo_url %}
-                                    <img src="{{ asso.logo_url }}" alt="Logo" class="float-right">
-                                {% endif %}
+                        <ul class="nav nav-tabs" id="myTab" role="tablist">
+                            <li class="nav-item">
+                                <a class="nav-link active" id="info-tab-{{ asso.id }}" data-toggle="tab"
+                                   href="#info-{{ asso.id }}" role="tab"
+                                   aria-controls="info-{{ asso.id }}" aria-expanded="true">
+                                    Infos générales
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" id="events-tab-{{ asso.id }}" data-toggle="tab"
+                                   href="#events-{{ asso.id }}" role="tab"
+                                   aria-controls="events-{{ asso.id }}">
+                                    Évènements
+                                </a>
+                            </li>
+                        </ul>
+                        <div class="tab-content" id="myTabContent">
+                            <div class="tab-pane fade show active" id="info-{{ asso.id }}" role="tabpanel"
+                                 aria-labelledby="info-tab-{{ asso.id }}">
 
-                                <p>
-                                    {% if asso.current_directory_entry.description %}
-                                        {{ asso.current_directory_entry.description|linebreaksbr }}
-                                    {% else %}
-                                        <em>Non défini</em>
-                                    {% endif %}
-                                </p>
+                                <div class="row">
+                                    <div class="col-12">
+                                        <h5>Description</h5>
+
+                                        {% if asso.logo_url %}
+                                            <img src="{{ asso.logo_url }}" alt="Logo" class="float-right">
+                                        {% endif %}
+
+                                        <p>
+                                            {% if asso.current_directory_entry.description %}
+                                                {{ asso.current_directory_entry.description|linebreaksbr }}
+                                            {% else %}
+                                                <em>Non défini</em>
+                                            {% endif %}
+                                        </p>
+                                    </div>
+                                </div>
+
+
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <h5>Lieu</h5>
+                                        <p>
+                                            <i class="fa fa-fw fa-location-arrow"></i>
+                                            {% if asso.current_directory_entry.place %}
+                                                {% with place=asso.current_directory_entry.place %}
+                                                    <a href="http://www.google.com/maps/place/{{ place.lat|unlocalize }},{{ place.long|unlocalize }}">
+                                                        {{ place.name }}
+                                                    </a>
+                                                {% endwith %}
+                                            {% else %}
+                                                <em>Non défini</em>
+                                            {% endif %}
+                                        </p>
+                                    </div>
+
+                                    <div class="col-md-6">
+                                        <h5>Site web</h5>
+                                        <p>
+                                            <i class="fa fa-fw fa-external-link"></i>
+                                            {% if asso.current_directory_entry.website_url %}
+                                                <a href="{{ asso.current_directory_entry.website_url }}">
+                                                    {{ asso.current_directory_entry.website_url }}
+                                                </a>
+                                            {% else %}
+                                                <em>Non défini</em>
+                                            {% endif %}
+                                        </p>
+                                    </div>
+                                </div>
+
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <h5>Contact</h5>
+                                        <p>
+                                            <i class="fa fa-fw fa-envelope-o"></i>
+                                            {% if asso.current_directory_entry.contact_address %}
+                                                <a href="mailto:{{ asso.current_directory_entry.contact_address }}">
+                                                    {{ asso.current_directory_entry.contact_address }}
+                                                </a>
+                                            {% else %}
+                                                <em>Non défini</em>
+                                            {% endif %}<br>
+
+                                            <i class="fa fa-fw fa-phone"></i>
+                                            {% if asso.current_directory_entry.phone %}
+                                                <a href="tel:{{ asso.current_directory_entry.phone }}">
+                                                    {{ asso.current_directory_entry.phone }}
+                                                </a>
+                                            {% else %}
+                                                <em>Non défini</em>
+                                            {% endif %}
+                                        </p>
+
+                                    </div>
+
+                                    <div class="col-md-6">
+                                        <h5>Réseaux sociaux</h5>
+                                        <p>
+                                            <i class="fa fa-fw fa-facebook-f"></i>
+                                            {% if asso.current_directory_entry.facebook_url %}
+                                                <a href="{{ asso.current_directory_entry.facebook_url }}">
+                                                    Facebook
+                                                </a>
+                                            {% else %}
+                                                <em>Non défini</em>
+                                            {% endif %}
+                                            <br>
+
+                                            <i class="fa fa-fw fa-twitter"></i>
+                                            {% if asso.current_directory_entry.twitter_url %}
+                                                <a href="{{ asso.current_directory_entry.twitter_url }}">
+                                                    Twitter
+                                                </a>
+                                            {% else %}
+                                                <em>Non défini</em>
+                                            {% endif %}
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="tab-pane fade" id="events-{{ asso.id }}" role="tabpanel"
+                                 aria-labelledby="events-tab{{ asso.id }}">
+                                List of asso events
                             </div>
                         </div>
 
 
-                        <div class="row">
-                            <div class="col-md-6">
-                                <h5>Lieu</h5>
-                                <p>
-                                    <i class="fa fa-fw fa-location-arrow"></i>
-                                    {% if asso.current_directory_entry.place %}
-                                        {% with place=asso.current_directory_entry.place %}
-                                            <a href="http://www.google.com/maps/place/{{ place.lat|unlocalize }},{{ place.long|unlocalize }}">
-                                                {{ place.name }}
-                                            </a>
-                                        {% endwith %}
-                                    {% else %}
-                                        <em>Non défini</em>
-                                    {% endif %}
-                                </p>
-                            </div>
-
-                            <div class="col-md-6">
-                                <h5>Site web</h5>
-                                <p>
-                                    <i class="fa fa-fw fa-external-link"></i>
-                                    {% if asso.current_directory_entry.website_url %}
-                                        <a href="{{ asso.current_directory_entry.website_url }}">
-                                            {{ asso.current_directory_entry.website_url }}
-                                        </a>
-                                    {% else %}
-                                        <em>Non défini</em>
-                                    {% endif %}
-                                </p>
-                            </div>
-                        </div>
-
-                        <div class="row">
-                            <div class="col-md-6">
-                                <h5>Contact</h5>
-                                <p>
-                                    <i class="fa fa-fw fa-envelope-o"></i>
-                                    {% if asso.current_directory_entry.contact_address %}
-                                        <a href="mailto:{{ asso.current_directory_entry.contact_address }}">
-                                            {{ asso.current_directory_entry.contact_address }}
-                                        </a>
-                                    {% else %}
-                                        <em>Non défini</em>
-                                    {% endif %}<br>
-
-                                    <i class="fa fa-fw fa-phone"></i>
-                                    {% if asso.current_directory_entry.phone %}
-                                        <a href="tel:{{ asso.current_directory_entry.phone }}">
-                                            {{ asso.current_directory_entry.phone }}
-                                        </a>
-                                    {% else %}
-                                        <em>Non défini</em>
-                                    {% endif %}
-                                </p>
-
-                            </div>
-
-                            <div class="col-md-6">
-                                <h5>Réseaux sociaux</h5>
-                                <p>
-                                    <i class="fa fa-fw fa-facebook-f"></i>
-                                    {% if asso.current_directory_entry.facebook_url %}
-                                        <a href="{{ asso.current_directory_entry.facebook_url }}">
-                                            Facebook
-                                        </a>
-                                    {% else %}
-                                        <em>Non défini</em>
-                                    {% endif %}
-                                    <br>
-
-                                    <i class="fa fa-fw fa-twitter"></i>
-                                    {% if asso.current_directory_entry.twitter_url %}
-                                        <a href="{{ asso.current_directory_entry.twitter_url }}">
-                                            Twitter
-                                        </a>
-                                    {% else %}
-                                        <em>Non défini</em>
-                                    {% endif %}
-                                </p>
-                            </div>
-                        </div>
                     </div>
                     <div class="modal-footer">
                         {% if user.is_superuser %}
