Add message when no event. Fix #66

--- a/templates/directory/public.html
+++ b/templates/directory/public.html
@@ -209,6 +209,8 @@
                                             </p>
                                         </div>
                                     </div>
+                                {% empty %}
+                                    <em>Aucun évènement à venir.</em>
                                 {% endfor %}
 
                             </div>
