Add website for event. #64

--- a/templates/event/detail.html
+++ b/templates/event/detail.html
@@ -101,6 +101,15 @@
         </div>
     </div>
 
+    <div class="row mb-3">
+        <div class="col-12">
+            <b>Page web</b>
+            <div class="card bg-light">
+                <div class="card-body">{{ object.website_url }}</div>
+            </div>
+        </div>
+    </div>
+
     <div class="row">
         <div class="col-12">
             <b>Tarifs</b>
