Add link to botinsa in nav menu

--- a/templates/directory/public.html
+++ b/templates/directory/public.html
@@ -3,7 +3,7 @@
 {% load l10n %}
 
 {% block page_title %}
-    Bot'INSA
+    Bot'INSA Beta
 {% endblock %}
 {% block page_sub_title %}
     Liste des associations
