--- a/templates/base.html
+++ b/templates/base.html
@@ -67,6 +67,10 @@
                     <a class="nav-link" href="{% url 'homepage' %}">Accueil</a>
                 </li>
 
+                <li class="nav-item{% if request.resolver_match.url_name == 'association-directory-public' %} active{% endif %}">
+                    <a class="nav-link" href="{% url 'association-directory-public' %}">Bot'INSA (Beta)</a>
+                </li>
+
                 {% if my_associations.count == 1 %}
 
                     <li class="nav-item">
